# wctaylor_thesis_code

./: .gitignore  README.md  setup.cfg
config/: example_config.json  mpl_thesis_rc  mpl_thesis_settings.tex  test_tex.py~  texlive.profile
data/: ybe_lxe_neutron_entry_spectrum_biekert.txt  ybe_lxe_recoil_spectrum_biekert.txt
notebooks/: cross_sections_and_spectra.ipynb  decay_rates.ipynb  lz_er_background.ipynb  ybe_spectra.ipynb
scripts/: activation_cross_sections.py  chapter4_2_cross_sections.py  lz_er_background.py
src/thesis/: config.py  xs.py
src/thesis/isotopes/: __init__.py  cesium.py  iodine.py  xenon.py
