[metadata]
name = wctaylor_thesis_code
version = 1.0.0
author = Will Taylor
author_email = william_taylor@brown.edu
description = Code used in writing my thesis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BrownParticleAstro/wctaylor_thesis_code
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src